--- a/scss/generic/reset.scss
+++ b/scss/generic/reset.scss
@@ -2,6 +2,7 @@
    v2.0-modified | 20110126
    License: none (public domain)
 */
+
 html,
 body,
 div,
@@ -138,17 +139,19 @@ table {
   border-spacing: 0;
 }
 
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration,
-input[type=search]::-webkit-search-results-button,
-input[type=search]::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
 
-input[type=search] {
+input[type="search"] {
   -webkit-appearance: none;
   -moz-appearance: none;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
@@ -161,6 +164,7 @@ textarea {
 /**
  * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
+
 audio,
 canvas,
 video {
@@ -174,6 +178,7 @@ video {
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
+
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -183,6 +188,7 @@ audio:not([controls]) {
  * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
  * Known issue: no IE 6 support.
  */
+
 [hidden] {
   display: none;
 }
@@ -193,6 +199,7 @@ audio:not([controls]) {
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
+
 html {
   font-size: 100%; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -202,6 +209,7 @@ html {
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
+
 a:focus {
   outline: thin dotted;
 }
@@ -209,6 +217,7 @@ a:focus {
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
+
 a:active,
 a:hover {
   outline: 0;
@@ -218,6 +227,7 @@ a:hover {
  * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
  * 2. Improve image quality when scaled in IE 7.
  */
+
 img {
   border: 0; /* 1 */
   -ms-interpolation-mode: bicubic; /* 2 */
@@ -226,6 +236,7 @@ img {
 /**
  * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
  */
+
 figure {
   margin: 0;
 }
@@ -233,6 +244,7 @@ figure {
 /**
  * Correct margin displayed oddly in IE 6/7.
  */
+
 form {
   margin: 0;
 }
@@ -240,6 +252,7 @@ form {
 /**
  * Define consistent border, margin, and padding.
  */
+
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
@@ -251,6 +264,7 @@ fieldset {
  * 2. Correct text not wrapping in Firefox 3.
  * 3. Correct alignment displayed oddly in IE 6/7.
  */
+
 legend {
   border: 0; /* 1 */
   padding: 0;
@@ -264,6 +278,7 @@ legend {
  *    and Chrome.
  * 3. Improve appearance and consistency in all browsers.
  */
+
 button,
 input,
 select,
@@ -278,6 +293,7 @@ textarea {
  * Address Firefox 3+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
+
 button,
 input {
   line-height: normal;
@@ -289,6 +305,7 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
+
 button,
 select {
   text-transform: none;
@@ -303,10 +320,11 @@ select {
  * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
  *    Known issue: inner spacing remains in IE 6.
  */
+
 button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
+html input[type="button"], /* 1 */
+input[type="reset"],
+input[type="submit"] {
   -webkit-appearance: button; /* 2 */
   cursor: pointer; /* 3 */
   *overflow: visible; /* 4 */
@@ -315,6 +333,7 @@ input[type=submit] {
 /**
  * Re-set default cursor for disabled elements.
  */
+
 button[disabled],
 html input[disabled] {
   cursor: default;
@@ -326,8 +345,9 @@ html input[disabled] {
  * 3. Remove excess padding in IE 7.
  *    Known issue: excess padding remains in IE 6.
  */
-input[type=checkbox],
-input[type=radio] {
+
+input[type="checkbox"],
+input[type="radio"] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
   *height: 13px; /* 3 */
@@ -339,8 +359,11 @@ input[type=radio] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-input[type=search] {
-  -webkit-appearance: textfield; /* 1 */ /* 2 */
+
+input[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box; /* 2 */
   box-sizing: content-box;
 }
 
@@ -348,14 +371,16 @@ input[type=search] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
 /**
  * Remove inner padding and border in Firefox 3+.
  */
+
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -366,6 +391,7 @@ input::-moz-focus-inner {
  * 1. Remove default vertical scrollbar in IE 6/7/8/9.
  * 2. Improve readability and alignment in all browsers.
  */
+
 textarea {
   overflow: auto; /* 1 */
   vertical-align: top; /* 2 */
@@ -374,6 +400,7 @@ textarea {
 /**
  * Remove most spacing between table cells.
  */
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -417,46 +444,3 @@ textarea {
   color: #000;
   padding: 0.2em 0;
 }
-
-.btn {
-  color: white;
-  font-family: "Heebo", sans-serif;
-  font-weight: 500;
-  font-size: 1.25rem;
-  line-height: 1.8rem;
-  border-radius: 2px;
-  background-color: #FF6464;
-  border: none;
-  padding: 0.55rem 1.3rem 0.55rem 1.3rem;
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Heebo", sans-serif;
-}
-
-.container {
-  width: 1152px;
-  margin: 0 auto;
-}
-@media (max-width: 1352px) {
-  .container {
-    width: 100%;
-    padding: 0 15px;
-  }
-}
-
-p {
-  font-size: 50px;
-  font-family: "Heebo", sans-serif;
-  color: #FF6464;
-}
-
-* {
-  border: 1px solid red;
-}
-/*# sourceMappingURL=main.css.map */
