--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,21 @@
-body{
-   background-color: aqua;
+@import "generic/reset.scss";
+
+@import"settings/fonts";
+@import "settings/colors";
+@import "settings/buttons";
+@import "settings/mixins";
+
+// ----------ELEMENTS
+
+@import "elements/base";
+
+
    p{
       font-size: 50px;
+      font-family: $font-heebo;
+      color:$color-primary;
    }
-}
+
+   *{
+      border: 1px solid red;
+   }
