--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -2,3 +2,5 @@ $color-primary: #FF6464;
 $color-secondary: #00A8CC;
 $color-dark: #21243D;
 $color-light: #8695A4;
+$color-white:#ffff;
+$color-black: #000;
