--- a/scss/elements/_base.scss
+++ b/scss/elements/_base.scss
@@ -6,13 +6,24 @@ body {
    font-family: $font-heebo;
 }
 
-.container{
+[class *= "__container"] {
    width: 1152px;
    margin: 0 auto;
-   // border: 1px solid red;
+   border: 1px solid red;
 
    @include notebook {
       width: 100%;
       padding: 0 15px;
+   }
+   @include tablet {
+      max-width: 970px;
+      color: green;
+   }
+   @include mobile{
+      max-width: 750px;
+   }
+   @include small{
+      max-width: none;
+      padding: 0 10px;
    }
 }
