--- a/scss/generic/reset.scss
+++ b/scss/generic/reset.scss
@@ -92,6 +92,10 @@ video {
   vertical-align: baseline;
 }
 
+html{
+   position: relative;
+}
+
 /* make sure to set some focus styles for accessibility */
 :focus {
   outline: 0;
