--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -6,7 +6,7 @@
 
 
    &__content{
-      max-width: 1044px;
+      max-width: 1032px;
       padding: 0 10px;
       margin: 0 auto;
 
@@ -16,8 +16,6 @@
    }
 
    .menu {
-      // display: flex;
-      // justify-content: flex-end;
       align-items: center;
 
       &__list {
@@ -51,30 +49,29 @@
 
    
 
-   @include small {
+   @include mobile {
 
 
       .menu__icon {
          display: block;
          position: absolute;
-         width: 4rem;
+         width: 3rem;
          height: 4rem;
          top: 0.5rem;
          right:2rem;
-         z-index: 5;
+         z-index: 5;   
       }
 
       .header__content{
          display: block;
          transform: translate(0px, -100%);
-         transition: transform 0.5s ease 0s;
          padding: 0;
          height: 100vh;
          width: 100vw;
          position: fixed;
-         z-index: 4;
+         // z-index: 4;
          overflow: auto;
- 
+         background-color: rgba(255, 255, 255, 0.445);
       }
 
       .menu {
@@ -97,7 +94,8 @@
       .active{
          display: block;
          transform: translate(0px, 0%);
-
+         transition: transform 0.5s ease 0s;
+         z-index: 2;
       }
    }
 }
