--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,19 @@
 @import "generic/reset.scss";
 
+// -----------SETTINGS
+
 @import"settings/fonts";
 @import "settings/colors";
 @import "settings/buttons";
 @import "settings/mixins";
+@import "settings/text";
+@import "settings/title";
+
 
 // ----------ELEMENTS
 
 @import "elements/base";
 @import "elements/header";
+@import "elements/main-hello";
 
-   p{
-      font-size: 50px;
-      font-family: $font-heebo;
-      color:$color-primary;
-   }
 
-   *{
-      border: 1px solid red;
-   }
