--- a/scss/settings/_title.scss
+++ b/scss/settings/_title.scss
@@ -1,8 +1,8 @@
-.title {
+// .title {
 
-   font-family: $font-heebo;
-   font-weight: 700;
-   font-size: 2.75rem;
-   line-height: 3.75rem;
-   color:$color-dark;
-}
+//    font-family: $font-heebo;
+//    font-weight: 700;
+//    font-size: 2.75rem;
+//    line-height: 3.75rem;
+//    color:$color-dark;
+// }
