--- a/scss/elements/_main-hello.scss
+++ b/scss/elements/_main-hello.scss
@@ -16,6 +16,11 @@
    }
 
    &__title {
+      font-family: $font-heebo;
+      font-weight: 700;
+      font-size: 2.75rem;
+      line-height: 3.75rem;
+      color:$color-dark;
       padding-bottom: 2rem;
    }
 
@@ -75,11 +80,11 @@
          padding: 2rem 0 0 0;
       }
 
-      .title{
+      &__title{
          font-size: 2rem;
          line-height: 2.5rem;
       }  
-      .text{
+      &__text{
          padding-bottom: 1.6rem;
       } 
    }
