finished (features-works) part of main page with adaptive + footer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,5 +16,7 @@
 @import "elements/header";
 @import "elements/main-hello";
 @import "elements/_main-posts";
+@import "elements/_main-features-works";
+@import "elements/_footer";
 
 
