--- a/css/main.css
+++ b/css/main.css
@@ -461,37 +461,28 @@ body {
 [class*=__container] {
   width: 857px;
   margin: 0 auto;
-  border: 1px solid red;
 }
 @media (max-width: 1352px) {
   [class*=__container] {
     width: 857px;
     padding: 0 15px;
-    border: 1px solid green;
   }
 }
 @media (max-width: 1024px) {
   [class*=__container] {
     max-width: 970px;
-    border: 1px solid pink;
   }
 }
 @media (max-width: 792px) {
   [class*=__container] {
     max-width: 750px;
-    border: 1px solid blue;
   }
 }
 @media (max-width: 480px) {
   [class*=__container] {
     max-width: none;
     padding: 0 10px;
-    border: 1px solid brown;
   }
-}
-
-* {
-  border: 1px solid red;
 }
 
 .header__content {
@@ -544,6 +535,7 @@ body {
   .header .header__content {
     display: block;
     transform: translate(0px, -100%);
+    transition: transform 0.5s ease 0s;
     padding: 0;
     height: 100vh;
     width: 100vw;
@@ -733,5 +725,101 @@ body {
   .recent-post__text {
     padding: 0 1.25rem 1.3rem;
   }
+}
+
+.featured-works {
+  display: flex;
+  padding: 0 1rem 5rem;
+}
+.featured-works__header {
+  padding: 1.25rem 0 0 0;
+}
+.featured-works__title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.375rem;
+  line-height: 3rem;
+  color: #21243D;
+}
+@media (max-width: 792px) {
+  .featured-works__title {
+    text-align: center;
+  }
+}
+.featured-works .item-featured-works {
+  display: flex;
+  border-bottom: 1px solid #E0E0E0;
+  padding-top: 2rem;
+}
+@media (max-width: 792px) {
+  .featured-works .item-featured-works {
+    display: block;
+    padding: rem;
+  }
+}
+.featured-works .item-featured-works__img {
+  padding: 0 1.125rem 0.9rem 0;
+  flex: 0 0 15.3rem;
+  display: block;
+}
+@media (max-width: 792px) {
+  .featured-works .item-featured-works__img img {
+    display: block;
+    max-height: 100%;
+    min-width: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    vertical-align: bottom;
+  }
+}
+
+.item-description__title {
+  font-family: "Heebo", sans-serif;
+  font-weight: 700;
+  font-size: 1.875rem;
+  line-height: 2.75rem;
+  color: #21243D;
+  padding: 0 0 1rem 0;
+}
+.item-description__info {
+  color: #8695A4;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 1.8rem;
+}
+.item-description__info span {
+  color: white;
+  font-weight: 900;
+  font-size: 1.1rem;
+  background-color: #21243D;
+  padding: 0 0.6rem;
+  border-radius: 1rem;
+  margin: 0 1.625rem 0 0;
+}
+.item-description__text {
+  padding: 1rem 0 0 0;
+}
+
+footer {
+  display: flex;
+}
+
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer__container .links {
+  padding: 3.125rem 0 1.625rem;
+}
+.footer__container .links a {
+  padding: 0 1.1rem 0 1.1rem;
+}
+.footer__container .copyright {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.3rem;
+  color: #21243D;
+  padding-bottom: 3.375rem;
 }
 /*# sourceMappingURL=main.css.map */
