--- a/scss/elements/_base.scss
+++ b/scss/elements/_base.scss
@@ -9,28 +9,28 @@ body {
 [class *= "__container"] {
    width: 857px;
    margin: 0 auto;
-   border: 1px solid red;
+   // border: 1px solid red;
 
    @include notebook {
       width: 857px;
       padding: 0 15px;
-      border: 1px solid green;
+      // border: 1px solid green;
 
    }
    @include tablet {
       max-width: 970px;
-      border: 1px solid pink;
+      // border: 1px solid pink;
 
    }
    @include mobile{
       max-width: 750px;
-      border: 1px solid blue;
+      // border: 1px solid blue;
 
    }
    @include small{
       max-width: none;
       padding: 0 10px;
-      border: 1px solid brown;
+      // border: 1px solid brown;
 
    }
 }
