--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -1,6 +1,3 @@
-*{
-   border: 1px solid red;
-}
 
 .header {
 
@@ -65,6 +62,7 @@
       .header__content{
          display: block;
          transform: translate(0px, -100%);
+         transition: transform 0.5s ease 0s;
          padding: 0;
          height: 100vh;
          width: 100vw;
