--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,5 +28,10 @@
 
 //-----------WORK_PAGE_ELEMENTS
 
+
 @import "work-page-elements/work-page";
 
+
+//-----------DESIGN_DASH_PAGE
+
+@import "dashboard-page/design-dashboards-page";
