--- a/scss/dashboard-page/_design-dashboards-page.scss
+++ b/scss/dashboard-page/_design-dashboards-page.scss
@@ -29,6 +29,13 @@
       font-size: 2.125rem;
       line-height: 3.125rem;
       padding-bottom: 1.875rem;
+      @include mobile{
+         font-size: 1.875rem;
+         line-height: 2.5rem;
+         padding-bottom: 1.4rem;
+
+      }
+
 
    }
 
@@ -37,8 +44,13 @@
       font-weight: 400;
       font-size: 1.25rem;
       line-height: 1.8rem;
+      display: flex;
 
       span{
+         @include mobile{
+            height: 100%;
+         }
+         display: block;
          color:$color-white;
          font-weight: 900;
          font-size: 1.125rem;
@@ -52,43 +64,18 @@
 
 
    &__text {
-      padding: 1.5rem 0 2.875rem; 
+      padding: 1.5rem 0 1.25rem; 
    
    }
 
    &__image {
-      @include mobile{
-         min-width: 10%;
-      }
+      img{
+         width:100%;
+         padding: 1.25rem 0;
+         @include mobile{
+            width: 100%;
+            padding: 0;
+         }  
+     }
    }
-
-  
-
-   // &__img {
-   //   padding: 0 1.125rem 0.9rem 0;
-   //   flex: 0 0 15.3rem;
-   //   display: block;
-   //   @include mobile{
-      
-   //    img{
-   //       display: block;
-   //       min-width: 100%;
-   //       object-fit:contain;
-   //       vertical-align: bottom;
-   //    }
-   //   }
-   // }
 }
-// .design-dashboards
-// .design-dashboards
-
-// .article
-// .title {
-// }
-// .article
-// .article
-// .arctilce
-// .article
-// .text {
-// }
-// .article
